# mech-jepa

./: .gitignore  README.md  pyproject.toml
configs/: clevrer.yaml  pusht.yaml
mechjepa/: __init__.py  abm_policy.py  codebook.py  cost_model.py  dynamics.py  encoder.py  losses.py  model.py  planner.py  system_m.py
mechjepa/data/: __init__.py  clevrer_slots.py
scripts/: abm_pusht.py  analyze_bottleneck.py  eval_live_pusht.py  eval_pusht_ab.py  mock_train.py  plan_pusht.py  prepare_pusht_data.py  render_closedloop_gif.py  render_env_gif.py  render_gif.py  render_pusht_video.py  render_slot_video.py  runpod_eval_aloe.sh  runpod_pusht_setup.sh  runpod_pusht_train.sh  runpod_setup.sh  runpod_train.sh  train_clevrer.py  train_pusht.py  visualize_abm.py
tests/: test_model.py  test_swm_integration.py
