[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mechjepa"
version = "0.1.0"
description = "MechJEPA: World Models with Persistent Mechanism Memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gerard Calvo Bartra"},
]

dependencies = [
    "torch>=2.0",
    "einops>=0.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "loguru>=0.7",
    "tqdm>=4.65",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
eval = [
    "stable-worldmodel",
    "stable-pretraining",
]

[tool.setuptools.packages.find]
include = ["mechjepa*"]
